...
        self.informationLabel.text = self.information
        self.informationLabel.numberOfLines = 0
        self.informationLabel.font = .systemFont(ofSize: Constants.informationSizeValue(), weight: .medium)
        self.informationLabel.textAlignment = .center
        self.informationLabel.textColor = .textPrimary
        self.informationLabel.isAccessibilityElement = true
        self.informationLabel.accessibilityIdentifier = "factLabel"
        
        self.informationLabel.snp.makeConstraints { make in
            make.leading.trailing.equalToSuperview().inset(Constants.insetValue())
            make.top.equalTo(informationImage.snp.bottom).offset(Constants.offsetValue())
        }
    }
    
    func configureLanguagePicker() {
        self.languagePicker.delegate = self
        self.languagePicker.dataSource = self
        self.languagePicker.accessibilityIdentifier = "languagePicker"
        
        self.languagePicker.snp.makeConstraints { make in
            make.leading.trailing.equalToSuperview().inset(Constants.insetValue())
            make.top.equalTo(informationLabel.snp.bottom)
            make.bottom.equalToSuperview().offset(-Constants.offsetValue())
            make.height.equalTo(Constants.pickerHeightValue())
...
